# src/modules/massages/router/massage.route.js
@@ -7,6 +7,7 @@ const { ProtectedRoters } = require('../../auth/controller/auth.controller');
 const {
     sendMessage,
     getGroupMessages,
+    deleteMessage
 } = require('../controller/massage.controller');
 
 
@@ -14,6 +15,6 @@ router.get('/:groupId/messages', ProtectedRoters, getGroupMessages);
 
 router.post('/:groupId/message', ProtectedRoters, sendMessage);
 
-
+router.delete('/:groupId/message/:messageId', ProtectedRoters, deleteMessage);
 
 module.exports = router;
